diversas mejoras para el curso 23-24

--- a/apache2-php/Dockerfile
+++ b/apache2-php/Dockerfile
@@ -1,23 +1,27 @@
 FROM php:8.1.0-apache
 
+# Para evitar interacciones durante la instalación de paquetes, si no se pone cuando la terminal pregunte una confirmación se interrumpe la creación de la imagen.
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN docker-php-ext-install mysqli
+# Paquetes necesarios de la imagen.
+RUN apt-get update && apt-get install -y \
+        libpng-dev \
+        libzip-dev \
+        zlib1g-dev \
+        libonig-dev \
+        vim \
+        sendmail \
+    && docker-php-ext-install mysqli mbstring zip gd \
+    && a2enmod rewrite \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Include alternative DB driver
-# RUN docker-php-ext-install pdo
-# RUN docker-php-ext-install pdo_mysql
-RUN apt-get update \
-	&& apt-get install -y vim \
-    && apt-get install -y sendmail libpng-dev \
-    && apt-get install -y libzip-dev \
-    && apt-get install -y zlib1g-dev \
-    && apt-get install -y libonig-dev \
-    && rm -rf /var/lib/apt/lists/* \
-    && docker-php-ext-install zip
 
-RUN docker-php-ext-install mbstring
-RUN docker-php-ext-install zip
-RUN docker-php-ext-install gd
+# Copiar archivos de configuración de virtual host
+COPY ./conf/*.conf /etc/apache2/sites-available/
 
-RUN a2enmod rewrite
+# Copiar archivos de contraseñas
+COPY ./etc/apache2/.htpasswd /etc/apache2/.htpasswd
+
+# Habilitar los virtual hosts
+RUN a2ensite intranet.conf
