fix conexión base de datos y forma de acceso a la intranet

--- a/apache2-php/conf/intranet.conf
+++ b/apache2-php/conf/intranet.conf
@@ -7,12 +7,13 @@ Listen 8060
 
     <Directory /var/www/html/intranet>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride All
 
         AuthType Basic
         AuthName "Area Restringida"
         # El archivo que contiene las contraseñas de acceso estará en el archivo .htpasswd en el directorio /etc/apache2
         AuthUserFile /etc/apache2/.htpasswd
         Require valid-user
+
     </Directory>
 </VirtualHost>
